apps/local-services/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: local-services
  labels:
    istio-injection: enabled
