apps/local-services/local.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: komodo
  namespace: local-services
spec:
  ports:
    - name: http
      port: 9120
      protocol: TCP
      targetPort: 9120
  clusterIP: None
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: komodo
  namespace: local-services
  labels:
    kubernetes.io/service-name: komodo
addressType: IPv4
ports:
  - name: http
    port: 9120
    protocol: TCP
endpoints:
  - addresses:
      - "192.168.178.91"
---
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: local-services
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  clusterIP: None
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: adguard
  namespace: local-services
  labels:
    kubernetes.io/service-name: adguard
addressType: IPv4
ports:
  - name: http
    port: 80
    protocol: TCP
endpoints:
  - addresses:
      - "192.168.178.91"
---
apiVersion: v1
kind: Service
metadata:
  name: ddns
  namespace: local-services
spec:
  ports:
  - name: app
    port: 8000
    protocol: TCP
    targetPort: 8000
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ddns
  namespace: local-services
subsets:
- addresses:
  - ip: 192.168.178.91
  ports:
  - name: app
    port: 8000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: adsb
  namespace: local-services
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: adsb
  namespace: local-services
subsets:
- addresses:
  - ip: 192.168.178.113
  ports:
  - name: app
    port: 80
    protocol: TCP
